refactor
updated READ
update README.md
remove commented code